--- a/package.json
+++ b/package.json
@@ -3,10 +3,15 @@
   "name": "URLhaus",
   "version": "3.2.6-beta",
   "private": true,
+  "scripts": {
+    "test": "jest"
+  },
   "dependencies": {
     "async": "^3.2.0",
     "bottleneck": "^2.19.5",
+    "jest": "^27.2.1",
     "lodash": "^4.17.19",
+    "nock": "^13.1.3",
     "request": "^2.88.2"
   }
 }
