--- a/package.json
+++ b/package.json
@@ -12,6 +12,6 @@
     "jest": "^27.2.4",
     "lodash": "^4.17.19",
     "nock": "^13.1.3",
-    "request": "^2.88.2"
+    "postman-request": "^2.88.1-postman.31"
   }
 }
