Updating File: config/config.json

--- a/config/config.json
+++ b/config/config.json
@@ -1,4 +1,5 @@
 {
+  "polarityIntegrationUuid": "cca385d0-cce1-11ed-aeee-075d3490155d",
   "name": "URLhaus",
   "acronym": "URLH",
   "description": "Polarity URLhaus Integration",
